[package]
edition = "2024"
name = "rustwasm-decoder-testbed"
version = "0.1.0"

[dependencies]
serde = {version = "1.0.228", features = ["derive"], default-features = false}
serde_json = {version = "1.0.145", default-features = false, features = ["alloc"]}
wasm-bindgen = "0.2.104"
zip = {version = "5.1.1", default-features = false, features = ["deflate"]}
